2009-09-11  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/ProjectInformation.cs: Allow vala files to be edited 
	  without a vsc-shell installation. Reported by Andy Selvig.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in:
	* ValaBinding.csproj:
	* gtk-gui/gui.stetic: We now depend on gtk# 2.12.8, Mono 2.4,
	  and Mono.Addins 0.4.

2009-07-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/ValaProjectBinding.cs: Track api changes.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/ValaProject.cs: Track api changes.

2009-06-17  Lluis Sanchez Gual  <lluis@novell.com>

	* ValaBinding.sln:
	* ValaBinding.addin.xml:
	* gtk-gui/MonoDevelop.ValaBinding.PackageDetails.cs: Remove
	  obsolete extension.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* ValaBinding.sln:
	* ValaBinding.csproj: Flush.

2009-04-28  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/CodeNode.cs:
	* Parser/ProjectInformation.cs: Make document type extraction
	  more robust.

2009-04-28  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/ProjectInformation.cs: Force reparse on file update.

2009-04-23  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Gui/ValaTextEditorExtension.cs: 
	* Parser/ValaDocumentParser.cs: 
	* Parser/ProjectInformation.cs: Improve completion robustness.

2009-04-23  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/ProjectInformation.cs: Keep parser from blocking project load.

2009-04-20  Michael Hutchinson  <mhutchinson@novell.com>

	* ValaLanguageBinding.cs: Track comment tag API.

2009-04-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/ValaProject.cs: Track api changes done in
	  IExecutionHandler.

2009-04-16  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/ValaDocumentParser.cs: Allow non-project files 
	  to be parsed.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in:
	* AssemblyInfo.cs: