@@ -1,3 +1,9 @@
+2009-09-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
+	* Gui/DataProvider.cs:
+	* Parser/ValaDocumentParser.cs:
+	* Parser/ProjectInformation.cs: Track completion window API.
+
 2009-09-11  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
 
 	* Parser/ProjectInformation.cs: Allow vala files to be edited 
